tests/NormalTests/paczka1/small_fuzzy/78857589.err
Error in line 4: 28sOxjj6q8 A800 9,4
Error in line 10: 2Gj0691Be A800 68,2
